--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>스테이징, 커밋, 푸시 잊지마세요!</h1>
+      <h1>기존 작업방식과 다른 점은?</h1>
     </div>
   </body>
 </html>
